# currency_convertor

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .yamllint  README.md  docker-compose.yml  entrypoint.sh  requirements-dev.txt  requirements.txt  setup.cfg
aws/: template.yaml
aws/currency_convertor/: app.py
currency_convertor/: Dockerfile  Dockerfile.prod  __init__.py  wsgi.py
currency_convertor/currency/: models.py  views.py
currency_convertor/tasks/: __init__.py  worker.py
currency_convertor/tinycache/: __init__.py
kiwi_currency/: Dockerfile  __init__.py  entrypoint.sh  wsgi.py
kiwi_currency/currency/: __init__.py  models.py  views.py
kiwi_currency/tasks/: Dockerfile  __init__.py  worker.py
kiwi_currency/tinycache/: __init__.py
monitoring/grafana/: datasource.yaml
monitoring/grafana/dashboards/: example.json
monitoring/prometheus/: prometheus.yml
tests/: conftest.py  data.sql  test_currency.py  test_init.py  test_tinycache.py
