[metadata]
name = currency_convertor
version = attr: currency_convertor.__version__
url = https://github.com/nikolalazovski
author = Nikola Lazovski
author_email = nikola.lazovski@gmail.com
license = MIT
license_file = LICENSE.rst
description = A basic REST API for currency conversion
long_description = file: README.md

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =
    Flask==1.1.2
    Flask-SQLAlchemy==2.5.1
    requests==2.25.1
    psycopg2-binary==2.8.6
    celery==5.0.5
    gunicorn==20.0.4
    prometheus-flask-exporter==0.18.1

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = currency_convertor
omit =
    currency_convertor/tasks/*
